[NETBEANS-5828] : Resolved auto merge conflicts from JDK-17+32